# AI_Data_Insights

./: .gitignore  README.md  api_bridge.py  capture_output.py  debug_git.py  list_models.py  list_models_v2.py  main.py  pyproject.toml  requirements.txt  simple_test.py  standalone_ui.html  test_api.py  test_exec.py  test_lite.py  test_log.py  test_yf.py  ver_check.py
agents/: insight_agent.py  scraper_agent.py  transform_agent.py
app/: dashboard.py
config/: settings.py
database/: db.py
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx  index.css
